--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <ol>
         <li>
             <a>
+                "He likes feet" - Cormac Irvin, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "I like women" - Antoni Kowalski, 2021
             </a>
         </li>
