--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <ol>
         <li>
             <a>
+                "Just slip it in" - Daniel Salusbury, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "I'm not like the other girls." - Arnav Tripathi, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "The Nappie Man" - Anonymous Teacher, 2021
             </a>
         </li>
