--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <ol>
         <li>
             <a>
+                "My dad gave me herpes" - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "I would go gay for marko" - Malik Breitbach, 2021
             </a>
         </li>
