--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <ol>
         <li>
             <a>
+                "Damn, your cute" - Florian Conradt, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "I hate people that quote things" - Philip Anghel, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "She's bad" - Philip Anghel, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "He's cuming" - Philip Anghel, 2021
             </a>
         </li>
