--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         Quotes
     </h1>
     <ol>
+        
         <li>
             <a>
                 "To cool for school" - Philip Anghel, 2021
@@ -18,7 +19,7 @@
         </li>
         <li>
             <a>
-                "Wheb I am online I do lots of things" - Florian Conradt, 2021
+                "When I am online I do lots of things" - Florian Conradt, 2021
             </a>
         </li>
         <li>
