--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         Quotes
     </h1>
     <ol>
-        
+        <li>
+            <a>
+                "Tshong lee, I don't even know if that's a person" - Philip Anghel, 2021
+            </a>
+        </li>
         <li>
             <a>
                 "To cool for school" - Philip Anghel, 2021
