--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <ol>
         <li>
             <a>
+                "Children are Cheese" - Lindie, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "I'm dumb" - Florian Conradt, 2021
             </a>
         </li>
