--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <ol>
         <li>
             <a>
+                "You get one of those black things from the field" - Cormac Irvin, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "He nibbled my ear" - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "Just declare that you are gay, its that easy." - Ted Sery, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "Children are Cheese" - Lindie, 2021
             </a>
         </li>
