--- a/index.html
+++ b/index.html
@@ -11,6 +11,52 @@
         Quotes
     </h1>
     <ol>
+        
+        <li>
+            <a>
+                "What are human rights?" - Yasin Fredj
+            </a>
+        </li>
+        <li>
+            <a>
+                "I have a cripple" - Yasin Fredj, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "You gotta hate Venezuelans" - Daniel Lindholm, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "Old people are problematic" - Anonymous Teacher, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "Make the old people work" - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "They should fix Japanese culture" - Oliver Teulings, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "Andre is it cool if I call you nappies?"- Daniel Franklin, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "agressive keyboard tapping" - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "We are kinda just quoting each other now"- Daniel Franklin, 2021
+            </a>
+        </li>
         <li>
             <a>
                 "You get one of those black things from the field" - Cormac Irvin, 2021
