--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         Quotes
     </h1>
     <ol>
-        
         <li>
             <a>
-                "What are human rights?" - Yasin Fredj
+                "My p**** tastes like salami" - Antoni Kowalski, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "What are human rights?" - Yasin Fredj, 2021
             </a>
         </li>
         <li>
