--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <ol>
         <li>
             <a>
+                "Ik heb met Daniel gezoend, het was 30 minuten." - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "Dat is Goed" - Anonymous Dutch Teacher, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                "On your knees daddy" - Malik Breitbach, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "My p**** tastes like salami" - Antoni Kowalski, 2021
             </a>
         </li>
