--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <ol>
         <li>
             <a>
+                "Ik will patat patat met mayonaise" - Ted Sery, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "Ik heb met Daniel gezoend, het was 30 minuten." - Malik Breitbach, 2021
             </a>
         </li>
