--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <ol>
         <li>
             <a>
+                “Since when do babies need parachutes?” – Daniel Franklin, 2021
+            </a>
+        </li>
+        <li>
+            <a>
+                “One time I told my friend that I would pay him three Euros for him to shit in a trash can. He did it and got stuck, the teacher found him. Hey, at least he got three Euros” – Antoni Kowalski, 2021
+            </a>
+        </li>   
+        <li>
+            <a>
+                “You look really warm, take off your pants”- Cormac Irvin, 2021
+            </a>
+        </li>
+        <li>
+            <a>
                 "Ik will patat patat met mayonaise" - Ted Sery, 2021
             </a>
         </li>
